# manga-translator-ui

./: .gitignore  README.md  manga-translator-api  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: folder.rs  fonts.rs  mod.rs  project.rs
src/components/canvas/: constants.ts  draw.ts  useCanvas.ts
src/components/ui/: ActionButtons.tsx  AppHeader.tsx  BottomToolbar.css  BottomToolbar.tsx  BubbleSettings.css  BubbleSettings.tsx  CombinedRightPanel.css  CombinedRightPanel.tsx  ContextMenu.css  ContextMenu.tsx  FloatingWindow.css  FloatingWindow.tsx  Icons.tsx  ImageCanvas.tsx  ImageList.tsx  ImageUploader.tsx  LeftMenuBar.css  LeftMenuBar.tsx  ResultDisplay.tsx  Settings.css  Settings.tsx  TauriContextMenu.tsx  TopMenu.tsx  TopProgressBar.tsx
src/hooks/: useContextMenu.ts  useDetection.ts  useDnDImport.ts  useHotkeys.ts  useImageLibrary.ts  useInpainting.ts  useModels.ts  useOcr.ts  useProcessAll.ts  useSettingsState.ts  useTextLayout.ts  useTranslation.ts
src/styles/: buttons.css  cards.css  global.css  layout.css  modal.css  panels.css  responsive.css  results.css  sidebars.css  viewer.css
src/types/: index.ts  svg.d.ts  ui.ts
src/utils/: llm.ts  pool.ts  sorting.ts
