[package]
name = "manga_translator_app"
version = "0.1.0"
edition = "2021"
description = "A Tauri App"
authors = ["you"]

# Если ты собираешь ТОЛЬКО desktop-версию,
# можно вообще убрать [lib] и оставить только bin (main.rs).
# Это уменьшит время сборки (на размер exe не влияет).
# Если lib все же нужен (например, для mobile) — оставь:
# [lib]
# name = "manga_translator_app_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ВАЖНО: reqwest без дефолтных фич + rustls (меньше бинарь, чем native-tls)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }

# сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# базовые утилиты
base64 = "0.22"

# таури (без лишних фич)
tauri = { version = "2", features = ["protocol-asset"] }

# диалоги выбора папки/файлов (оставляем; без дефолтных фич — меньше)
rfd = { version = "0.12.1", default-features = false, features = ["xdg-portal"] }

# ZIP archive support for project export/import
zip = "2.1"
font-kit = "0.11"
image = "0.24"
png = "0.17"
